--- a/core-customize/manifest.json
+++ b/core-customize/manifest.json
@@ -543,16 +543,11 @@
         }
     ],
     "tests": {
-        "extensions": [
-            "kiwi",
-            "tiger"
-        ],
+        "extensions": [],
         "annotations": [
             "UnitTests",
             "IntegrationTests"
         ],
-        "packages": [
-            "com.acme.*"
-        ]
+        "packages": []
     }
 }
